<resources>
    <string name="app_name">SAVVY</string>
    <string name="icon_description">Icono de web</string>
    <string name="examen">EXAMEN</string>
    <string name="refrigeraci_n">REFRIGERACIÓN</string>
    <string name="analiza_e_interpreta_el_funcionamiento_de_los_sistemas_de_refrigeraci_n_de_vapor_por_compresi_n_as_como_selecci_n_de_los_equipos_que_los_componen_con_el_objeto_de_determinar_sus_indicadores_fundamentales">Analiza e interpreta el funcionamiento de los sistemas de refrigeración de vapor por compresión así como selección de los equipos que los componen con el objeto de determinar sus indicadores fundamentales.</string>
    <string name="tablas_y_cartas_psicom_tricas">Tablas y cartas psicométricas.</string>
    <string name="proceso_de_enfriamiento_sensible">Proceso de enfriamiento sensible.</string>
    <string name="proceso_de_calentamiento_sensible">Proceso de calentamiento sensible.</string>
    <string name="proceso_de_enfriamiento_de_humificaci_n">Proceso de enfriamiento de humificación.</string>
    <string name="proceso_de_calentamientohumidificaci_n">Proceso de calentamientohumidificación.</string>
    <string name="proceso_de_calentamientodeshuminificaci_n">Proceso de calentamientodeshuminificación.</string>
    <string name="calculo_de_cargas_termicas">Calculo de cargas termicas</string>
    <string name="evaluaci_n_final">Evaluación final</string>
    <string name="proceso_de_enfriamiento_humidificaci_n">Proceso de enfriamiento-humidificación.</string>
    <string name="proceso_de_n_enfriamiento_sensible">Proceso de\n enfriamiento sensible</string>
    <string name="proceso_de_ncalentamiento_sensible">Proceso de\ncalentamiento sensible</string>
    <string name="proceso_de_enfriamiento_nde_humificaci_n">Proceso de enfriamiento\nde humificación.</string>
    <string name="proceso_de_nenfriamiento_humidificaci_n">Proceso de\nenfriamiento-humidificación.</string>
    <string name="proceso_de_ncalentamientohumidificaci_n">Proceso de\ncalentamientohumidificación.</string>
    <string name="proceso_de_ncalentamientodeshuminificaci_n">Proceso de\ncalentamientodeshuminificación.</string>
    <string name="actividades_habilitadas">Actividades habilitadas</string>
    <string name="palabras_perdidas_a_la_vista">Palabras perdidas a la vista</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="h">H</string>
    <string name="u">U</string>
    <string name="m">M</string>
    <string name="e1">E</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="d1">D</string>
    <string name="u1">U</string>
    <string name="f">F</string>
    <string name="b">B</string>
    <string name="s">S</string>
    <string name="d2">D</string>
    <string name="o">O</string>
    <string name="a1">A</string>
    <string name="b1">B</string>
    <string name="palabras_perdidas_a_la_vista1">Palabras perdidas a la vista</string>
    <string name="c1">C</string>
    <string name="o1">O</string>
    <string name="n">N</string>
    <string name="s1">S</string>
    <string name="t">T</string>
    <string name="a2">A</string>
    <string name="n1">N</string>
    <string name="t1">T</string>
    <string name="e2">E</string>
    <string name="t2">T</string>
    <string name="l">l</string>
    <string name="g">G</string>
    <string name="q">Q</string>
    <string name="o2">O</string>
    <string name="p">P</string>
    <string name="e3">E</string>
    <string name="a3">A</string>
    <string name="z">Z</string>
    <string name="o3">O</string>
    <string name="k">K</string>
    <string name="p1">P</string>
    <string name="j">J</string>
    <string name="k1">K</string>
    <string name="a4">A</string>
    <string name="z1">Z</string>
    <string name="w">W</string>
    <string name="h1">H</string>
    <string name="b2">B</string>
    <string name="w1">W</string>
    <string name="t3">T</string>
    <string name="q1">Q</string>
    <string name="s2">S</string>
    <string name="m1">M</string>
    <string name="b3">B</string>
    <string name="s3">S</string>
    <string name="a5">A</string>
    <string name="n2">N</string>
    <string name="t4">T</string>
    <string name="e4">E</string>
    <string name="u2">U</string>
    <string name="s4">S</string>
    <string name="j1">J</string>
    <string name="b4">B</string>
    <string name="p2">P</string>
    <string name="e5">E</string>
    <string name="o4">O</string>
    <string name="u3">U</string>
    <string name="n3">N</string>
    <string name="o5">O</string>
    <string name="v">V</string>
    <string name="u4">U</string>
    <string name="h2">H</string>
    <string name="m2">M</string>
    <string name="o6">O</string>
    <string name="j2">J</string>
    <string name="p3">P</string>
    <string name="b5">B</string>
    <string name="c2">C</string>
    <string name="y">Y</string>
    <string name="l1">L</string>
    <string name="j3">J</string>
    <string name="t5">T</string>
    <string name="u5">U</string>
    <string name="h3">H</string>
    <string name="a6">A</string>
    <string name="e6">E</string>
    <string name="lf6">L</string>
    <string name="o7">O</string>
    <string name="s5">S</string>
    <string name="x">X</string>
    <string name="o8">O</string>
    <string name="a7">A</string>
    <string name="b6">B</string>
    <string name="a8">A</string>
    <string name="t6">T</string>
    <string name="e7">E</string>
    <string name="e9">E</string>
    <string name="z2">Z</string>
    <string name="d3">D</string>
    <string name="u6">U</string>
    <string name="a9">A</string>
    <string name="m3">M</string>
    <string name="n4">N</string>
    <string name="o9">O</string>
    <string name="p4">P</string>
    <string name="o10">O</string>
    <string name="e8">E</string>
    <string name="s6">S</string>
    <string name="v1">V</string>
    <string name="q2">Q</string>
    <string name="e10">E</string>
    <string name="a10">A</string>
    <string name="t7">T</string>
    <string name="t8">T</string>
    <string name="e11">E</string>
    <string name="m4">M</string>
    <string name="p5">P</string>
    <string name="e12">E</string>
    <string name="r">R</string>
    <string name="a11">A</string>
    <string name="t9">T</string>
    <string name="u7">U</string>
    <string name="r1">R</string>
    <string name="a12">A</string>
    <string name="d4">D</string>
    <string name="a13">A</string>
    <string name="a14">A</string>
    <string name="r2">R</string>
    <string name="m5">M</string>
    <string name="c3">C</string>
    <string name="a15">A</string>
    <string name="e13">E</string>
    <string name="o11">O</string>
    <string name="c4">C</string>
    <string name="g1">G</string>
    <string name="s7">S</string>
    <string name="v2">V</string>
    <string name="u8">U</string>
    <string name="e14">E</string>
    <string name="n5">N</string>
    <string name="f1">F</string>
    <string name="r3">R</string>
    <string name="a16">A</string>
    <string name="m6">M</string>
    <string name="i">I</string>
    <string name="e15">E</string>
    <string name="n6">N</string>
    <string name="t10">T</string>
    <string name="o12">O</string>
    <string name="f2">F</string>
    <string name="r4">R</string>
    <string name="e16">E</string>
    <string name="l2">L</string>
    <string name="a17">A</string>
    <string name="t11">T</string>
    <string name="i1">I</string>
    <string name="v3">V</string>
    <string name="a18">A</string>
    <string name="b7">B</string>
    <string name="q3">Q</string>
    <string name="w2">W</string>
    <string name="a19">A</string>
    <string name="b8">B</string>
    <string name="h5">H</string>
    <string name="n7">N</string>
    <string name="z3">Z</string>
    <string name="i2">I</string>
    <string name="e17">E</string>
    <string name="d5">D</string>
    <string name="p6">P</string>
    <string name="u9">U</string>
    <string name="j4">J</string>
    <string name="m7">M</string>
    <string name="a20">A</string>
    <string name="y4">Y</string>
    <string name="s8">S</string>
    <string name="e18">E</string>
    <string name="n10">N</string>
    <string name="s9">S</string>
    <string name="i3">I</string>
    <string name="b9">B</string>
    <string name="e19">E</string>
    <string name="a21">A</string>
    <string name="y1">Y</string>
    <string name="g2">G</string>
    <string name="b10">B</string>
    <string name="b11">B</string>
    <string name="l3">L</string>
    <string name="d6">D</string>
    <string name="c5">C</string>
    <string name="a22">A</string>
    <string name="l4">L</string>
    <string name="e20">E</string>
    <string name="f3">F</string>
    <string name="a23">A</string>
    <string name="c6">C</string>
    <string name="c7">C</string>
    <string name="i4">I</string>
    <string name="o13">O</string>
    <string name="n11">N</string>
    <string name="b12">B</string>
    <string name="i5">I</string>
    <string name="f0c0">columna 0 fila 0\n</string>
    <string name="f0c1">columna 1 fila 0</string>
    <string name="c2f0">columna 2 fila 0</string>
    <string name="c0f11">columna 0 fila 11\n</string>
    <string name="c1f11">columna 1 fila 11\n</string>
    <string name="adivina_y_gana_sin_perder_la_calma">Adivina y gana,\nsin perder la calma.</string>
    <string name="tiempo_restante">Tiempo restante:</string>
    <string name="_10_00">10:00</string>
    <string name="respepuestaA">respuestaAanz</string>
    <string name="respepuestaB">respuestaBanz</string>
    <string name="respepuestaC">respuestaCanz\n</string>
    <string name="respepuestaD">respuestaDanz</string>
    <string name="adivinanza">adivinanza\n</string>
    <string name="reto_aceptado">¡Reto aceptado!</string>
    <string name="cuatro">4</string>
    <string name="tres">3</string>
    <string name="dos">2</string>
    <string name="uno">1</string>
    <string name="back_arrow_description">Flecha de retroceso</string>
    <string name="potfrig">Potencia Frigorifica</string>
    <string name="textsus">Se realizaran la sustitucion de valores de las formulas siguientes :</string>
    <string name="primerpaso">Primer Paso:h1=vapor saturado</string>
    <string name="primerproc">En la tabla Refrigerante 134a saturado. tabla de temperarura buscar la temperatura que se esta realizando buscando el valor de Entalpia en vapor saturado:\n h1=252.77</string>
    <string name="reaejem">A continuacion se realizara un ejemplo:</string>
    <string name="ejemplo">"T1=4°C \n QL=400KW \n P2=1 Mpa"</string>
    <string name="datos">Datos</string>
    <string name="segundopaso">segundo paso: h2=sobrecalentado</string>
    <string name="segundoproc">En la tabla Refrigerante 134a sobrecalentado buscar el 1.00 MPa para posteriormente buscar la temperatura y tener el valor de kJ/kg que en este caso sera 270.99 kJ/kg</string>
    <string name="tercerpaso">tercer paso: h3=liquido saturado</string>
    <string name="tercerproc">En la tabla Refrigerante 134a saturado por presion convertir los Mpa en Kpa en este caso sera 1000 que despues de buscarlo en el lugar de Kpa buscar el valor en entalpia en liquido saturado que en este caso sera 107.32 </string>
    <string name="cuartopaso">cuarto paso:h4=Mezcla</string>
    <string name="formula1">procedimiento formula 1</string>
    <string name="formula2">procedimiento formula 2</string>
    <string name="formula3">procedimiento formula 3</string>
    <string name="correo">Correo Electronico</string>
    <string name="back_arrow">Botón de regreso</string>
    <string name="trescirculos">circulos de 3 colores</string>
    <string name="cerrar">cerrar sesión</string>
    <string name="nombreusu">Nombre de usuario</string>
    <string name="infocorreo">esmeraldag1758@gmail.com</string>
    <string name="usuario">Esmeralda Imelda Arrieta González</string>
    <string name="cerrar_sesionbutton">Cerrar sesión y salir de la aplicación</string>
</resources>