<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    android:id="@+id/potencia"
    android:padding="16dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/backArrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:layout_gravity="start|center_vertical"
                    android:contentDescription="@string/back_arrow"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="onBackArrowClick" />

                <!-- Texto -->
                <TextView
                    android:id="@+id/Textsavvy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/potfrig"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/seccion1"
                android:orientation="vertical"
                android:padding="16dp">


                <!-- Información principal centrada -->
                <TextView
                    android:id="@+id/contenid_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/reaejem"
                    android:maxWidth="300dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/contenid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/datos"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contenid_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ejemplo"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/circu1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/opcion7"
                        android:gravity="center"
                        android:text="@string/uno"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/contenid0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/primerpaso"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/contenid2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/primerproc"
                    android:maxWidth="300dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/circu2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/opcion7"
                        android:gravity="center"
                        android:text="@string/dos"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/contenid3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/segundopaso"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <TextView
                    android:id="@+id/contenid4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/segundoproc"
                    android:maxWidth="300dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/circu3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/opcion7"
                        android:gravity="center"
                        android:text="@string/tres"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/contenid5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/tercerpaso"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/contenid6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/tercerproc"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:maxWidth="300dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/circu4"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/opcion7"
                        android:gravity="center"
                        android:text="@string/cuatro"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/contenido7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/cuartopaso"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/conteni8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/textsus"
                    android:maxWidth="300dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="300dp"
                    android:layout_height="114dp"
                    android:src="@drawable/cop"
                    android:contentDescription="@string/formula1"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="300dp"
                    android:layout_height="123dp"
                    android:src="@drawable/cop2"
                    android:contentDescription="@string/formula2"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="300dp"
                    android:layout_height="107dp"
                    android:src="@drawable/cop3"
                    android:contentDescription="@string/formula3"
                    tools:ignore="MissingConstraints" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>