<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueD"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="@color/blueD"
        android:contentDescription="@string/back_arrow_description"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:layout_width="250dp"
        android:layout_height="374dp"
        android:layout_gravity="center"
        android:contentDescription="@string/trescirculos"
        android:src="@drawable/circulos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:layout_marginStart="-430dp"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:contentDescription="@string/trescirculos"
        android:src="@drawable/circulos"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-850dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:text="@string/nombreusu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="-250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textnombre"
        android:layout_width="342dp"
        android:layout_height="30dp"
        android:text="@string/usuario"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textcorreo"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:text="@string/correo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="298dp"
        android:layout_height="34dp"
        android:text="@string/infocorreo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


        <ImageButton
            android:id="@+id/cerrarsesion"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/blueD"
            android:contentDescription="@string/cerrar_sesionbutton"
            android:src="@drawable/sign_out"
            android:layout_marginTop="770dp"
            android:layout_marginEnd="350dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/cerrar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="700dp"
            android:layout_marginEnd="90dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>